# phonometrica

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Info.plist  README.md  autocompletion.py  autocompletion_list.py  bundle_mac.sh  extract_functions.py  icons.qrc  icons2arrays.sh  known_bugs.txt  make-deb.sh  notes.md  phonometrica.cpp  phonometrica.rc  roadmap.md  roadmap.txt  setup.iss  sound_wave.icns  stringify_scripts.phon  toolchain.cmake  windows.rc
docs/: Makefile  annotation.rst  concordance.rst  conf.py  index.rst  make.bat  mkdoc.sh  query.rst  sound.rst
docs/about/: acknowledgements.rst  license.rst  release-notes.rst
docs/intro/: install.rst  start.rst
docs/phon_lexer/: setup.py
docs/phon_lexer/phon/: lexer.py
docs/phon_lexer/phonometrica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
docs/scripting/: index.rst  plugins.rst
examples/: annotation.phon  cherokee_vot.phon  closure.phon  fibonacci.phon  file.phon  for_loop.phon  foreach_loop.phon  hello_world.phon  if_statement.phon  import.phon  repeat_loop.phon  system.phon  unicode.phon  utils.phon  while_loop.phon
html/: .buildinfo  annotation.html  concordance.html  genindex.html  index.html  objects.inv  query.html  search.html  searchindex.js  sound.html
html/_static/: bizstyle.js  documentation_options.js  jquery-3.5.1.js  jquery.js  pygments.css
html/about/: acknowledgements.html  license.html  release-notes.html
html/intro/: install.html  start.html
html/scripting/: index.html  plugins.html
icons/: Credits.md  convert_png.sh
licenses/: JSON-LICENSE.txt  QXT-LICENSE.txt  RPOLYPLUSPLUS-LICENSE.TXT  UTF8-LEN-LICENSE.txt
misc/: control  cpp_header.txt  dependencies.md  dropdown.xcf  meta-pfc.csv  phonometrica.desktop  png2c.py  qt5.cmd  standard-scripts.xml  test-metadata.csv  utf16.TextGrid  utf8.TextGrid
misc/phonometrica-vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
phon/: array.hpp  definitions.hpp  dictionary.hpp  error.cpp  error.hpp  file.cpp  file.hpp  hashmap.hpp  regex.cpp  regex.hpp  runtime.hpp  string.cpp  string.hpp  traits.hpp
phon/analysis/: BSD.txt  dsp_utils.cpp  dsp_utils.hpp  lpc.cpp  medfilt1.cpp  regression.cpp  regression.hpp  signal_processing.cpp  signal_processing.hpp  speech_utils.cpp  speech_utils.hpp  statistics.cpp  statistics.hpp  weenink.cpp  weenink.hpp  yaapt.cpp  yaapt.hpp
phon/application/: agraph.cpp  agraph.hpp  annotation.cpp  annotation.hpp  audio_data.cpp  audio_data.hpp  audio_player.cpp  audio_player.hpp  bookmark.cpp  bookmark.hpp  data_table.cpp  data_table.hpp  database.cpp  database.hpp  dataset.cpp  dataset.hpp  document.cpp  document.hpp  macros.hpp  metadata.cpp  metadata.hpp  plugin.cpp  plugin.hpp  praat.cpp  praat.hpp  project.cpp  project.hpp  property.cpp  property.hpp  protocol.cpp  protocol.hpp  query_dataset.cpp  query_dataset.hpp  query_table.cpp  query_table.hpp  resampler.cpp  resampler.hpp  script.cpp  script.hpp  settings.cpp  (+7 more)
phon/gui/: application.cpp  application.hpp  bookmark_editor.cpp  bookmark_editor.hpp  boolean_edit.cpp  boolean_edit.hpp  button_stylesheet.hpp  channel_dialog.cpp  channel_dialog.hpp  check_list.cpp  check_list.hpp  check_list_box.cpp  check_list_box.hpp  code_editor.cpp  code_editor.hpp  console.cpp  console.hpp  conversion_dialog.cpp  conversion_dialog.hpp  csv_dialog.cpp  csv_dialog.hpp  csv_import_dialog.cpp  csv_import_dialog.hpp  dialog.cpp  dialog.hpp  dialog_buttons.cpp  dialog_buttons.hpp  event_editor.cpp  event_editor.hpp  event_line.cpp  event_line.hpp  field_box.cpp  field_box.hpp  file_manager.cpp  file_manager.hpp  file_selector.cpp  file_selector.hpp  font.hpp  formant_search_box.cpp  formant_search_box.hpp  (+113 more)
phon/include/: autocompletion_list.hpp  autocompletion_list_old.hpp  event_phon.hpp  function_declarations.hpp  icons.hpp  initialize_phon.hpp  menu_phon.hpp  read_settings_phon.hpp  reset_formants_settings_phon.hpp  reset_general_settings_phon.hpp  reset_intensity_settings_phon.hpp  reset_pitch_settings_phon.hpp  reset_sound_settings_phon.hpp  reset_spectrogram_settings_phon.hpp  reset_waveform_settings_phon.hpp  signal_phon.hpp  speech_analysis_phon.hpp  statistical_analysis_phon.hpp  transphon_phon.hpp  write_settings_phon.hpp
phon/runtime/: AUTHORS  COPYING  array.hpp  array_meta.cpp  astnames.inc  boolean_meta.cpp  builtin.cpp  builtins.cpp  callback.hpp  class.cpp  class.hpp  class_descriptor.hpp  code.cpp  code.hpp  common.hpp  compile.cpp  compile.hpp  date_meta.cpp  definitions.hpp  dtoa.cpp  dump.cpp  environment.cpp  environment.hpp  error.cpp  error.hpp  error_meta.cpp  file.cpp  file.hpp  file_meta.cpp  func_array.hpp  func_file.hpp  func_generic.hpp  func_list.hpp  func_math.hpp  func_module.hpp  func_regex.hpp  func_set.hpp  func_string.hpp  func_system.hpp  func_table.hpp  (+48 more)
phon/speech/: signal_processing.cpp  signal_processing.hpp  speech_utils.cpp  speech_utils.hpp
phon/utils/: alloc.cpp  alloc.hpp  any.hpp  file_system.cpp  file_system.hpp  helpers.cpp  helpers.hpp  matrix.cpp  matrix.hpp  memory.hpp  os.cpp  os.hpp  print.cpp  print.hpp  ref_count.hpp  refcount.hpp  signal.hpp  slice.hpp  span.hpp  text.cpp  text.hpp  xml.hpp  zip.cpp  zip.hpp
plugins/PFC/: README.md  description.json  description.phon  initialize.phon
scripts/: add_pfc_metadata.phon
std/: event.phon  initialize.phon  menu.phon  read_settings.phon  reset_formants_settings.phon  reset_general_settings.phon  reset_intensity_settings.phon  reset_pitch_settings.phon  reset_sound_settings.phon  reset_spectrogram_settings.phon  reset_waveform_settings.phon  signal.phon  speech_analysis.phon  statistical_analysis.phon  transphon.phon  write_settings.phon
unit_test/: bug_upvalue.phon  function_equality.phon  list_by_ref.phon  list_by_ref_and_value.phon  list_by_value.phon  parse_comment.phon  ref_to_list_elem.phon  ref_to_tab_elem.phon  set_ref_to_tab_elem.phon  string_by_ref.phon  string_by_ref_and_value.phon  string_by_value.phon  test.cpp  test_array.cpp  test_hashmap.cpp  test_regex.cpp  test_string.cpp
(+188 files in other folders)
